Fix overflow on Safari

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@
 html, body {
   background: #EEE;
   overflow-x: hidden;
+  position: relative;
 }
 
 .cursor-default {
